<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.space.ui.news.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.space.ui.payment.PaymentFragment"
        android:label="@string/title_payment"
        tools:layout="@layout/fragment_payment" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.space.ui.account.AccountFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_account" />
</navigation>